--- a/cn.zh-cn/用户指南/内容审核的监控指标.md
+++ b/cn.zh-cn/用户指南/内容审核的监控指标.md
@@ -1,6 +1,6 @@
 # 内容审核的监控指标<a name="ZH-CN_TOPIC_0137161958"></a>
 
-**表 1**  内容检测的监控指标
+**表 1**  内容审核的监控指标
 
 <a name="table102675383222"></a>
 <table><thead align="left"><tr id="row726893842214"><th class="cellrowborder" valign="top" width="16%" id="mcps1.2.6.1.1"><p id="p16270153816220"><a name="p16270153816220"></a><a name="p16270153816220"></a>指标名称</p>
