--- a/cn.zh-cn/用户指南/创建告警规则-1.md
+++ b/cn.zh-cn/用户指南/创建告警规则-1.md
@@ -14,6 +14,7 @@
 2.  单击“管理与部署 \> 云监控 \> 站点监控”。
 3.  在“站点监控”界面，单击监控站点所在行的“创建告警规则”。
 4.  在“创建告警规则”界面，根据界面提示配置参数。
+
     1.  根据界面提示，配置规则信息参数。
 
         **图 1**  配置规则信息<a name="fig283216161388"></a>  
@@ -144,5 +145,7 @@
         </table>
 
     4.  配置完成后，单击“立即创建”，完成告警规则的创建。
+
+    当被监控的站点出现异常时（如可用性≤90%），云监控服务会第一时间通过消息通知服务告知站点异常，以免因此造成业务损失。
 
 
