--- a/cn.zh-cn/用户指南/创建站点监控.md
+++ b/cn.zh-cn/用户指南/创建站点监控.md
@@ -2,7 +2,7 @@
 
 ## 操作场景<a name="section86441647572"></a>
 
-本章节指导用户创建站点监控。
+本章节指导用户创建站点监控，通过对站点进行网络探测，实现网络质量分析、性能分析等目的。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >一个账户最多创建20个站点监控。  
@@ -37,10 +37,10 @@
     </tr>
     <tr id="row332055105710"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.4.1.1 "><p id="p163205545712"><a name="p163205545712"></a><a name="p163205545712"></a>站点类型</p>
     </td>
-    <td class="cellrowborder" valign="top" width="52%" headers="mcps1.2.4.1.2 "><p id="p1432055195710"><a name="p1432055195710"></a><a name="p1432055195710"></a>目前可针对四种协议进行监控：HTTP、PING、TCP、UDP。</p>
+    <td class="cellrowborder" valign="top" width="52%" headers="mcps1.2.4.1.2 "><p id="p1432055195710"><a name="p1432055195710"></a><a name="p1432055195710"></a>目前可针对四种协议进行监控：HTTP(s)、PING、TCP、UDP。</p>
     <p id="p1532019517576"><a name="p1532019517576"></a><a name="p1532019517576"></a>更多站点类型正在部署中。</p>
     </td>
-    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p12320053577"><a name="p12320053577"></a><a name="p12320053577"></a>HTTP</p>
+    <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p12320053577"><a name="p12320053577"></a><a name="p12320053577"></a>HTTP(s)</p>
     </td>
     </tr>
     <tr id="row932025105711"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.4.1.1 "><p id="p1332018535714"><a name="p1332018535714"></a><a name="p1332018535714"></a>站点地址</p>
@@ -74,8 +74,8 @@
     </tr>
     <tr id="row1832115175714"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.4.1.1 "><p id="p7321959578"><a name="p7321959578"></a><a name="p7321959578"></a>请求方式</p>
     </td>
-    <td class="cellrowborder" valign="top" width="52%" headers="mcps1.2.4.1.2 "><p id="p1732115115711"><a name="p1732115115711"></a><a name="p1732115115711"></a>当站点类型为HTTP时可配置此参数。</p>
-    <p id="p832115565716"><a name="p832115565716"></a><a name="p832115565716"></a>HTTP标准的请求方法，包括GET、POST、HEAD，其中 POST 支持提交内容。</p>
+    <td class="cellrowborder" valign="top" width="52%" headers="mcps1.2.4.1.2 "><p id="p1732115115711"><a name="p1732115115711"></a><a name="p1732115115711"></a>当站点类型为HTTP(s)时可配置此参数。</p>
+    <p id="p832115565716"><a name="p832115565716"></a><a name="p832115565716"></a>HTTP(s)标准的请求方法，包括GET、POST、HEAD，其中 POST 支持提交内容。</p>
     </td>
     <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p20321145155718"><a name="p20321145155718"></a><a name="p20321145155718"></a>GET</p>
     </td>
@@ -90,7 +90,7 @@
     <tr id="row133231356574"><td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.4.1.1 "><p id="p332175155712"><a name="p332175155712"></a><a name="p332175155712"></a>高级配置</p>
     </td>
     <td class="cellrowborder" valign="top" width="52%" headers="mcps1.2.4.1.2 "><p id="p732114565715"><a name="p732114565715"></a><a name="p732114565715"></a>不同站点类型对应的高级配置不同。</p>
-    <a name="ul11323115195716"></a><a name="ul11323115195716"></a><ul id="ul11323115195716"><li>当站点类型为HTTP协议时，请参见<a href="#table1632335195715">表2</a>。</li><li>当站点类型为TCP协议时，请参见<a href="#table83287512573">表3</a>。</li><li>当站点类型为UDP协议时，请参见<a href="#table13328165135714">表4</a>。</li></ul>
+    <a name="ul11323115195716"></a><a name="ul11323115195716"></a><ul id="ul11323115195716"><li>当站点类型为HTTP(s)协议时，请参见<a href="#table1632335195715">表2</a>。</li><li>当站点类型为TCP协议时，请参见<a href="#table83287512573">表3</a>。</li><li>当站点类型为UDP协议时，请参见<a href="#table13328165135714">表4</a>。</li></ul>
     </td>
     <td class="cellrowborder" valign="top" width="32%" headers="mcps1.2.4.1.3 "><p id="p183231952571"><a name="p183231952571"></a><a name="p183231952571"></a>-</p>
     </td>
@@ -98,7 +98,7 @@
     </tbody>
     </table>
 
-    **表 2**  HTTP协议高级配置参数
+    **表 2**  HTTP\(s\)协议高级配置参数
 
     <a name="table1632335195715"></a>
     <table><thead align="left"><tr id="row932315511576"><th class="cellrowborder" valign="top" width="15.841584158415841%" id="mcps1.2.4.1.1"><p id="p173232515712"><a name="p173232515712"></a><a name="p173232515712"></a>参数</p>
