--- a/cn.zh-cn/用户指南/查看进程监控.md
+++ b/cn.zh-cn/用户指南/查看进程监控.md
@@ -48,12 +48,10 @@
     <td class="cellrowborder" valign="top" width="8.91089108910891%" headers="mcps1.2.6.1.3 "><p id="p9815231124"><a name="p9815231124"></a><a name="p9815231124"></a>0-1</p>
     </td>
     <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.6.1.4 "><p id="p173515249305"><a name="p173515249305"></a><a name="p173515249305"></a>测量对象：云服务器或裸金属服务器</p>
-    <div class="note" id="note1863112510315"><a name="note1863112510315"></a><a name="note1863112510315"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p19633175133114"><a name="p19633175133114"></a><a name="p19633175133114"></a>通过计算/proc/pid/stat的变化得出。</p>
-    </div></div>
+    <p id="p18977940114116"><a name="p18977940114116"></a><a name="p18977940114116"></a>通过计算/proc/pid/stat的变化得出。</p>
     </td>
     <td class="cellrowborder" valign="top" width="26.732673267326735%" headers="mcps1.2.6.1.5 "><p id="p94131488287"><a name="p94131488287"></a><a name="p94131488287"></a>测量对象：云服务器或裸金属服务器</p>
-    <div class="note" id="note141404813282"><a name="note141404813282"></a><a name="note141404813282"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p1442334842818"><a name="p1442334842818"></a><a name="p1442334842818"></a>通过Windows API GetProcessTimes获取进程CPU使用率。</p>
-    </div></div>
+    <p id="p16390125918418"><a name="p16390125918418"></a><a name="p16390125918418"></a>通过Windows API GetProcessTimes获取进程CPU使用率。</p>
     </td>
     </tr>
     <tr id="row1983723126"><td class="cellrowborder" valign="top" width="9.900990099009901%" headers="mcps1.2.6.1.1 "><p id="p8724192617519"><a name="p8724192617519"></a><a name="p8724192617519"></a>内存使用率</p>
@@ -63,16 +61,13 @@
     <td class="cellrowborder" valign="top" width="8.91089108910891%" headers="mcps1.2.6.1.3 "><p id="p1587223722"><a name="p1587223722"></a><a name="p1587223722"></a>0-1</p>
     </td>
     <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.6.1.4 "><p id="p144231624123119"><a name="p144231624123119"></a><a name="p144231624123119"></a>测量对象：云服务器或裸金属服务器</p>
-    <p id="p20902847377"><a name="p20902847377"></a><a name="p20902847377"></a>计算方式：RSS*PAGESIZE/MemTotal</p>
-    <div class="note" id="note913213521279"><a name="note913213521279"></a><a name="note913213521279"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p8444931203114"><a name="p8444931203114"></a><a name="p8444931203114"></a>计算方式：RSS*PAGESIZE/MemTotal</p>
-    <p id="p1439561413329"><a name="p1439561413329"></a><a name="p1439561413329"></a>RSS: 通过获取/proc/pid/statm第二列得到。</p>
-    <p id="p76793170321"><a name="p76793170321"></a><a name="p76793170321"></a>PAGESIZE: 通过命令getconf PAGESIZE获取。</p>
-    <p id="p11432920173216"><a name="p11432920173216"></a><a name="p11432920173216"></a>MemTotal：通过/proc/meminfo获取。</p>
-    </div></div>
+    <p id="p176709512415"><a name="p176709512415"></a><a name="p176709512415"></a>计算方式：RSS*PAGESIZE/MemTotal</p>
+    <p id="p20670185174119"><a name="p20670185174119"></a><a name="p20670185174119"></a>RSS: 通过获取/proc/pid/statm第二列得到。</p>
+    <p id="p36708511417"><a name="p36708511417"></a><a name="p36708511417"></a>PAGESIZE: 通过命令getconf PAGESIZE获取。</p>
+    <p id="p1867020511413"><a name="p1867020511413"></a><a name="p1867020511413"></a>MemTotal：通过/proc/meminfo获取。</p>
     </td>
     <td class="cellrowborder" valign="top" width="26.732673267326735%" headers="mcps1.2.6.1.5 "><p id="p360454972810"><a name="p360454972810"></a><a name="p360454972810"></a>测量对象：云服务器或裸金属服务器</p>
-    <div class="note" id="note76075493282"><a name="note76075493282"></a><a name="note76075493282"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p20616114918284"><a name="p20616114918284"></a><a name="p20616114918284"></a>使用Windows  API procGlobalMemoryStatusEx获取内存总量，通过GetProcessMemoryInfo获取内存已使用量，计算两者比值得到内存使用率。</p>
-    </div></div>
+    <p id="p12866133124220"><a name="p12866133124220"></a><a name="p12866133124220"></a>使用Windows  API procGlobalMemoryStatusEx获取内存总量，通过GetProcessMemoryInfo获取内存已使用量，计算两者比值得到内存使用率。</p>
     </td>
     </tr>
     <tr id="row159022312211"><td class="cellrowborder" valign="top" width="9.900990099009901%" headers="mcps1.2.6.1.1 "><p id="p135156347514"><a name="p135156347514"></a><a name="p135156347514"></a>打开文件数</p>
@@ -82,8 +77,7 @@
     <td class="cellrowborder" valign="top" width="8.91089108910891%" headers="mcps1.2.6.1.3 "><p id="p1495523229"><a name="p1495523229"></a><a name="p1495523229"></a>≥ 0</p>
     </td>
     <td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.6.1.4 "><p id="p929319385303"><a name="p929319385303"></a><a name="p929319385303"></a>测量对象：云服务器或裸金属服务器</p>
-    <div class="note" id="note1223605310300"><a name="note1223605310300"></a><a name="note1223605310300"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p7238155373018"><a name="p7238155373018"></a><a name="p7238155373018"></a>通过执行ls -l /proc/pid/fd命令可以查看数量。</p>
-    </div></div>
+    <p id="p93333186425"><a name="p93333186425"></a><a name="p93333186425"></a>通过执行ls -l /proc/pid/fd命令可以查看数量。</p>
     </td>
     <td class="cellrowborder" rowspan="6" valign="top" width="26.732673267326735%" headers="mcps1.2.6.1.5 "><p id="p1967544133113"><a name="p1967544133113"></a><a name="p1967544133113"></a>暂不支持</p>
     </td>
@@ -95,8 +89,7 @@
     <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p12928163310387"><a name="p12928163310387"></a><a name="p12928163310387"></a>≥ 0</p>
     </td>
     <td class="cellrowborder" rowspan="6" valign="top" headers="mcps1.2.6.1.4 "><p id="p8503193512179"><a name="p8503193512179"></a><a name="p8503193512179"></a>测量对象：云服务器或裸金属服务器</p>
-    <div class="note" id="note1615314161715"><a name="note1615314161715"></a><a name="note1615314161715"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p111542041131713"><a name="p111542041131713"></a><a name="p111542041131713"></a>通过统计 /proc/pid/status 中Status值获取每个进程的状态，进而统计各个状态进程总数。</p>
-    </div></div>
+    <p id="p785152234214"><a name="p785152234214"></a><a name="p785152234214"></a>通过统计 /proc/pid/status 中Status值获取每个进程的状态，进而统计各个状态进程总数。</p>
     </td>
     </tr>
     <tr id="row16939640123817"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="p3740125514380"><a name="p3740125514380"></a><a name="p3740125514380"></a>空闲进程数</p>
@@ -134,8 +127,7 @@
     <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p19126829113811"><a name="p19126829113811"></a><a name="p19126829113811"></a>≥ 0</p>
     </td>
     <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="p7526170537"><a name="p7526170537"></a><a name="p7526170537"></a>测量对象：云服务器或裸金属服务器</p>
-    <div class="note" id="note552117195312"><a name="note552117195312"></a><a name="note552117195312"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p05481775317"><a name="p05481775317"></a><a name="p05481775317"></a>通过psapi.dll系统进程状态支持模块得到进程总数。</p>
-    </div></div>
+    <p id="p1732203213426"><a name="p1732203213426"></a><a name="p1732203213426"></a>通过psapi.dll系统进程状态支持模块得到进程总数。</p>
     </td>
     </tr>
     </tbody>
