--- a/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
+++ b/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
@@ -3,7 +3,7 @@
 裸金属服务器（操作系统监控）支持的监控指标有：CPU相关监控指标（[表1](#zh-cn_topic_0104704449_table1274172674913)）、CPU负载类相关监控指标（[表2](#zh-cn_topic_0104704449_table341241110501)）、内存相关监控指标（[表3](#zh-cn_topic_0104704449_table844220384507)）、磁盘相关监控指标（[表4](#zh-cn_topic_0104704449_table1067218184514)）、磁盘I/O类（[表5](#table1559955415558)）、文件系统类（[表6](#table296913551343)）、软RAID相关监控指标（[表8](#zh-cn_topic_0104704449_table17716191314220)）和网卡类（[表7](#zh-cn_topic_0104704449_table19476249105111)）。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
->-   监控BMS需安装Agent插件，监控周期为10s。  
+>-   监控BMS需安装Agent插件。  
 >-   如果要监控软RAID相关指标，Agent版本必须为1.0.5及以上。  
 >-   Windows系统的裸金属服务器暂不支持监控。  
 
@@ -31,7 +31,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p697710469493"><a name="zh-cn_topic_0104704449_p697710469493"></a><a name="zh-cn_topic_0104704449_p697710469493"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p199778464495"><a name="zh-cn_topic_0104704449_p199778464495"></a><a name="zh-cn_topic_0104704449_p199778464495"></a>通过计算10s间隔“/proc/stat”文件中的变化得出CPU空闲时间占比。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p199778464495"><a name="zh-cn_topic_0104704449_p199778464495"></a><a name="zh-cn_topic_0104704449_p199778464495"></a>通过计算采集周期内“/proc/stat”文件中的变化得出CPU空闲时间占比。</p>
 <p id="zh-cn_topic_0104704449_p12977746144919"><a name="zh-cn_topic_0104704449_p12977746144919"></a><a name="zh-cn_topic_0104704449_p12977746144919"></a>用户可以通过<strong id="zh-cn_topic_0104704449_b58832064164253"><a name="zh-cn_topic_0104704449_b58832064164253"></a><a name="zh-cn_topic_0104704449_b58832064164253"></a>top</strong>命令查看“%Cpu(s) id”值。</p>
 </td>
 </tr>
@@ -57,7 +57,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p15978134684917"><a name="zh-cn_topic_0104704449_p15978134684917"></a><a name="zh-cn_topic_0104704449_p15978134684917"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p0978134644916"><a name="zh-cn_topic_0104704449_p0978134644916"></a><a name="zh-cn_topic_0104704449_p0978134644916"></a>通过计算10s间隔“/proc/stat”文件中的变化得出内核空间CPU使用率。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p0978134644916"><a name="zh-cn_topic_0104704449_p0978134644916"></a><a name="zh-cn_topic_0104704449_p0978134644916"></a>通过计算采集周期内“/proc/stat”文件中的变化得出内核空间CPU使用率。</p>
 <p id="zh-cn_topic_0104704449_p9978184613492"><a name="zh-cn_topic_0104704449_p9978184613492"></a><a name="zh-cn_topic_0104704449_p9978184613492"></a>用户可以通过<strong id="zh-cn_topic_0104704449_b65111313628"><a name="zh-cn_topic_0104704449_b65111313628"></a><a name="zh-cn_topic_0104704449_b65111313628"></a>top</strong>命令查看“%Cpu(s) sy”值。</p>
 </td>
 </tr>
@@ -70,7 +70,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p1497844624916"><a name="zh-cn_topic_0104704449_p1497844624916"></a><a name="zh-cn_topic_0104704449_p1497844624916"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p997812467499"><a name="zh-cn_topic_0104704449_p997812467499"></a><a name="zh-cn_topic_0104704449_p997812467499"></a>通过计算10s间隔“/proc/stat”中的变化得出用户空间CPU使用率。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p997812467499"><a name="zh-cn_topic_0104704449_p997812467499"></a><a name="zh-cn_topic_0104704449_p997812467499"></a>通过计算采集周期内“/proc/stat”中的变化得出用户空间CPU使用率。</p>
 <p id="zh-cn_topic_0104704449_p997815461493"><a name="zh-cn_topic_0104704449_p997815461493"></a><a name="zh-cn_topic_0104704449_p997815461493"></a>用户可以通过<strong id="zh-cn_topic_0104704449_b1099915261931"><a name="zh-cn_topic_0104704449_b1099915261931"></a><a name="zh-cn_topic_0104704449_b1099915261931"></a>top</strong>命令查看“%Cpu(s) us”值。</p>
 </td>
 </tr>
@@ -83,7 +83,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="p2369141815610"><a name="p2369141815610"></a><a name="p2369141815610"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p728854765611"><a name="p728854765611"></a><a name="p728854765611"></a>通过计算10s间隔“/proc/stat”中的变化得出用户空间CPU使用率。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p728854765611"><a name="p728854765611"></a><a name="p728854765611"></a>通过计算采集周期内“/proc/stat”中的变化得出用户空间CPU使用率。</p>
 <p id="p6291134715618"><a name="p6291134715618"></a><a name="p6291134715618"></a>用户可以通过<strong id="b9294154711566"><a name="b9294154711566"></a><a name="b9294154711566"></a>top</strong>命令查看“%Cpu(s) ”值。</p>
 </td>
 </tr>
@@ -96,7 +96,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="p13390114094912"><a name="p13390114094912"></a><a name="p13390114094912"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p182861747104013"><a name="p182861747104013"></a><a name="p182861747104013"></a>通过计算10s间隔/proc/stat中的变化得出Nice进程CPU使用率。用户可以通过top命令查看 %Cpu(s) ni值。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p182861747104013"><a name="p182861747104013"></a><a name="p182861747104013"></a>通过计算采集周期内/proc/stat中的变化得出Nice进程CPU使用率。用户可以通过top命令查看 %Cpu(s) ni值。</p>
 </td>
 </tr>
 <tr id="row142725794013"><td class="cellrowborder" valign="top" width="18.81188118811881%" headers="mcps1.2.6.1.1 "><p id="p12309132815275"><a name="p12309132815275"></a><a name="p12309132815275"></a>iowait状态占比</p>
@@ -108,7 +108,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="p5260555124015"><a name="p5260555124015"></a><a name="p5260555124015"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p663920448413"><a name="p663920448413"></a><a name="p663920448413"></a>通过计算10s间隔/proc/stat中的变化得出iowait状态占比。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p663920448413"><a name="p663920448413"></a><a name="p663920448413"></a>通过计算采集周期内/proc/stat中的变化得出iowait状态占比。</p>
 <p id="p342785718405"><a name="p342785718405"></a><a name="p342785718405"></a>用户可以通过top命令查看 %Cpu(s) wa值。</p>
 </td>
 </tr>
@@ -120,7 +120,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="p1698212556400"><a name="p1698212556400"></a><a name="p1698212556400"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p9141124715417"><a name="p9141124715417"></a><a name="p9141124715417"></a>通过计算10s间隔/proc/stat中的变化得出CPU中断时间占比。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p9141124715417"><a name="p9141124715417"></a><a name="p9141124715417"></a>通过计算采集周期内/proc/stat中的变化得出CPU中断时间占比。</p>
 <p id="p145785119401"><a name="p145785119401"></a><a name="p145785119401"></a>用户可以通过top命令查看 %Cpu(s) hi值。</p>
 </td>
 </tr>
@@ -133,7 +133,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="15.84158415841584%" headers="mcps1.2.6.1.4 "><p id="p151557174020"><a name="p151557174020"></a><a name="p151557174020"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p131853510412"><a name="p131853510412"></a><a name="p131853510412"></a>通过计算10s间隔/proc/stat中的变化得出CPU软中断时间占比。</p>
+<td class="cellrowborder" valign="top" width="26.732673267326728%" headers="mcps1.2.6.1.5 "><p id="p131853510412"><a name="p131853510412"></a><a name="p131853510412"></a>通过计算采集周期内/proc/stat中的变化得出CPU软中断时间占比。</p>
 <p id="p20174114514406"><a name="p20174114514406"></a><a name="p20174114514406"></a>用户可以通过top命令查看 %Cpu(s) si值。</p>
 </td>
 </tr>
@@ -368,7 +368,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p8712754155516"><a name="p8712754155516"></a><a name="p8712754155516"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p107156545559"><a name="p107156545559"></a><a name="p107156545559"></a>通过计算10s间隔“/proc/diskstats”文件中对应设备第六列数据的变化得出磁盘读速率。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p107156545559"><a name="p107156545559"></a><a name="p107156545559"></a>通过计算采集周期内“/proc/diskstats”文件中对应设备第六列数据的变化得出磁盘读速率。</p>
 <p id="p1940351414211"><a name="p1940351414211"></a><a name="p1940351414211"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -381,7 +381,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p27303545559"><a name="p27303545559"></a><a name="p27303545559"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p17332054145515"><a name="p17332054145515"></a><a name="p17332054145515"></a>通过计算10s间隔“/proc/diskstats”文件中对应设备第四列数据的变化得出磁盘读操作速率。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p17332054145515"><a name="p17332054145515"></a><a name="p17332054145515"></a>通过计算采集周期内“/proc/diskstats”文件中对应设备第四列数据的变化得出磁盘读操作速率。</p>
 <p id="p4103218822"><a name="p4103218822"></a><a name="p4103218822"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -394,7 +394,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p1674635465519"><a name="p1674635465519"></a><a name="p1674635465519"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p14750175416553"><a name="p14750175416553"></a><a name="p14750175416553"></a>通过计算10s间隔“/proc/diskstats”文件中对应设备第十列数据的变化得出磁盘写速率。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p14750175416553"><a name="p14750175416553"></a><a name="p14750175416553"></a>通过计算采集周期内“/proc/diskstats”文件中对应设备第十列数据的变化得出磁盘写速率。</p>
 <p id="p21171023828"><a name="p21171023828"></a><a name="p21171023828"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -407,7 +407,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p67628546556"><a name="p67628546556"></a><a name="p67628546556"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p15764125418557"><a name="p15764125418557"></a><a name="p15764125418557"></a>通过计算10s间隔“/proc/diskstats”文件中对应设备第八列数据的变化得出磁盘写操作速率。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p15764125418557"><a name="p15764125418557"></a><a name="p15764125418557"></a>通过计算采集周期内“/proc/diskstats”文件中对应设备第八列数据的变化得出磁盘写操作速率。</p>
 <p id="p41012271922"><a name="p41012271922"></a><a name="p41012271922"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -420,7 +420,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p942165217407"><a name="zh-cn_topic_0083516942_p942165217407"></a><a name="zh-cn_topic_0083516942_p942165217407"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p487810529578"><a name="p487810529578"></a><a name="p487810529578"></a>通过计算10s间隔/proc/diskstats中对应设备第七列数据的变化得出磁盘读操作平均耗时。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p487810529578"><a name="p487810529578"></a><a name="p487810529578"></a>通过计算采集周期内/proc/diskstats中对应设备第七列数据的变化得出磁盘读操作平均耗时。</p>
 <p id="p71451732125"><a name="p71451732125"></a><a name="p71451732125"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -433,7 +433,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p423815418405"><a name="zh-cn_topic_0083516942_p423815418405"></a><a name="zh-cn_topic_0083516942_p423815418405"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p182885514571"><a name="p182885514571"></a><a name="p182885514571"></a>通过计算10s间隔/proc/diskstats中对应设备第十一列数据的变化得出磁盘写操作平均耗时。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p182885514571"><a name="p182885514571"></a><a name="p182885514571"></a>通过计算采集周期内/proc/diskstats中对应设备第十一列数据的变化得出磁盘写操作平均耗时。</p>
 <p id="p163011351529"><a name="p163011351529"></a><a name="p163011351529"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -446,7 +446,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p19897165664017"><a name="zh-cn_topic_0083516942_p19897165664017"></a><a name="zh-cn_topic_0083516942_p19897165664017"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0083516942_p990615654016"><a name="zh-cn_topic_0083516942_p990615654016"></a><a name="zh-cn_topic_0083516942_p990615654016"></a>通过计算10s间隔/proc/diskstats中对应设备第十三列数据的变化得出磁盘I/O使用率。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0083516942_p990615654016"><a name="zh-cn_topic_0083516942_p990615654016"></a><a name="zh-cn_topic_0083516942_p990615654016"></a>通过计算采集周期内/proc/diskstats中对应设备第十三列数据的变化得出磁盘I/O使用率。</p>
 <p id="p1090014381522"><a name="p1090014381522"></a><a name="p1090014381522"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -459,20 +459,20 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p2015512557427"><a name="p2015512557427"></a><a name="p2015512557427"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p11809211915"><a name="p11809211915"></a><a name="p11809211915"></a>通过计算10s间隔/proc/diskstats中对应设备第十四列数据的变化得出磁盘平均队列长度。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p11809211915"><a name="p11809211915"></a><a name="p11809211915"></a>通过计算采集周期内/proc/diskstats中对应设备第十四列数据的变化得出磁盘平均队列长度。</p>
 <p id="p1813151012"><a name="p1813151012"></a><a name="p1813151012"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
 <tr id="row95818494421"><td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.6.1.1 "><p id="p3172175574210"><a name="p3172175574210"></a><a name="p3172175574210"></a>平均写操作大小</p>
 </td>
 <td class="cellrowborder" valign="top" width="30%" headers="mcps1.2.6.1.2 "><p id="p13177755184215"><a name="p13177755184215"></a><a name="p13177755184215"></a>该指标用于统计指定时间段内，平均每个写I/O操作传输的字节数。</p>
-<p id="p318012553426"><a name="p318012553426"></a><a name="p318012553426"></a>单位：KB/op</p>
+<p id="p318012553426"><a name="p318012553426"></a><a name="p318012553426"></a>单位：ms/op</p>
 </td>
-<td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.3 "><p id="p8186135574216"><a name="p8186135574216"></a><a name="p8186135574216"></a>≥ 0 KB/op</p>
+<td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.3 "><p id="p8186135574216"><a name="p8186135574216"></a><a name="p8186135574216"></a>≥ 0 ms/op</p>
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p819113557425"><a name="p819113557425"></a><a name="p819113557425"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p161522251118"><a name="p161522251118"></a><a name="p161522251118"></a>通过计算10s间隔/proc/diskstats中对应设备第十列数据的变化与第八列数据的变化相除得出磁盘平均写操作大小。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p161522251118"><a name="p161522251118"></a><a name="p161522251118"></a>通过计算采集周期内/proc/diskstats中对应设备第十列数据的变化与第八列数据的变化相除得出磁盘平均写操作大小。</p>
 <p id="p515313258117"><a name="p515313258117"></a><a name="p515313258117"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -485,7 +485,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p722625515424"><a name="p722625515424"></a><a name="p722625515424"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p19145105520218"><a name="p19145105520218"></a><a name="p19145105520218"></a>通过计算10s间隔/proc/diskstats中对应设备第六列数据的变化与第四列数据的变化相除得出磁盘平均读操作大小。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p19145105520218"><a name="p19145105520218"></a><a name="p19145105520218"></a>通过计算采集周期内/proc/diskstats中对应设备第六列数据的变化与第四列数据的变化相除得出磁盘平均读操作大小。</p>
 <p id="p114817551628"><a name="p114817551628"></a><a name="p114817551628"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -498,7 +498,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p326214556428"><a name="p326214556428"></a><a name="p326214556428"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p185331914314"><a name="p185331914314"></a><a name="p185331914314"></a>通过计算10s间隔/proc/diskstats中对应设备第十三列数据的变化与第四列数据与第八列数据和的变化相除得出磁盘平均I/O时长。</p>
+<td class="cellrowborder" valign="top" width="28.000000000000004%" headers="mcps1.2.6.1.5 "><p id="p185331914314"><a name="p185331914314"></a><a name="p185331914314"></a>通过计算采集周期内/proc/diskstats中对应设备第十三列数据的变化与第四列数据与第八列数据和的变化相除得出磁盘平均I/O时长。</p>
 <p id="p85354910316"><a name="p85354910316"></a><a name="p85354910316"></a>挂载点前缀路径长度不能超过64个字符，必须以字母开头，只能包含0-9/a-z/A-Z/-/./~。</p>
 </td>
 </tr>
@@ -595,7 +595,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="16.16161616161616%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p2923711115215"><a name="zh-cn_topic_0104704449_p2923711115215"></a><a name="zh-cn_topic_0104704449_p2923711115215"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" rowspan="8" valign="top" width="28.28282828282828%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p64772049175116"><a name="zh-cn_topic_0104704449_p64772049175116"></a><a name="zh-cn_topic_0104704449_p64772049175116"></a>通过计算10s间隔“/proc/net/dev”文件中的变化得出。</p>
+<td class="cellrowborder" rowspan="8" valign="top" width="28.28282828282828%" headers="mcps1.2.6.1.5 "><p id="zh-cn_topic_0104704449_p64772049175116"><a name="zh-cn_topic_0104704449_p64772049175116"></a><a name="zh-cn_topic_0104704449_p64772049175116"></a>通过计算采集周期内“/proc/net/dev”文件中的变化得出。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0104704449_row047714490517"><td class="cellrowborder" valign="top" headers="mcps1.2.6.1.1 "><p id="zh-cn_topic_0104704449_p12923191120526"><a name="zh-cn_topic_0104704449_p12923191120526"></a><a name="zh-cn_topic_0104704449_p12923191120526"></a>出网带宽</p>
@@ -691,12 +691,11 @@
 <td class="cellrowborder" valign="top" width="23.762376237623762%" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p192646151149"><a name="zh-cn_topic_0104704449_p192646151149"></a><a name="zh-cn_topic_0104704449_p192646151149"></a>该指标用于统计测量对象软RAID设备的状态，RAID异常情况下值为0。</p>
 </td>
 <td class="cellrowborder" valign="top" width="20.792079207920793%" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p152644157411"><a name="zh-cn_topic_0104704449_p152644157411"></a><a name="zh-cn_topic_0104704449_p152644157411"></a>0, 1</p>
-<div class="note" id="note526005110234"><a name="note526005110234"></a><a name="note526005110234"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p126185162315"><a name="p126185162315"></a><a name="p126185162315"></a>RAID正常情况下值为1，异常情况下值为0</p>
-</div></div>
+<p id="p8598205154012"><a name="p8598205154012"></a><a name="p8598205154012"></a>RAID正常情况下值为1，异常情况下值为0</p>
 </td>
 <td class="cellrowborder" valign="top" width="12.871287128712872%" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p1326412151414"><a name="zh-cn_topic_0104704449_p1326412151414"></a><a name="zh-cn_topic_0104704449_p1326412151414"></a>裸金属服务器</p>
 </td>
-<td class="cellrowborder" rowspan="5" valign="top" width="26.732673267326735%" headers="mcps1.2.6.1.5 "><p id="p13507102713125"><a name="p13507102713125"></a><a name="p13507102713125"></a>通过10s间隔执行插件脚本“/usr/local/telescope/plugins/raid-monitor.sh”得出，脚本中计算“/proc/mdstat”文件中的变化并执行<strong id="zh-cn_topic_0104704449_b1446918321628"><a name="zh-cn_topic_0104704449_b1446918321628"></a><a name="zh-cn_topic_0104704449_b1446918321628"></a>mdadm -D /dev/</strong><em id="zh-cn_topic_0104704449_i12685835421"><a name="zh-cn_topic_0104704449_i12685835421"></a><a name="zh-cn_topic_0104704449_i12685835421"></a>md0</em>（RAID名称）得出。</p>
+<td class="cellrowborder" rowspan="5" valign="top" width="26.732673267326735%" headers="mcps1.2.6.1.5 "><p id="p13507102713125"><a name="p13507102713125"></a><a name="p13507102713125"></a>通过采集周期内执行插件脚本“/usr/local/telescope/plugins/raid-monitor.sh”得出，脚本中计算“/proc/mdstat”文件中的变化并执行<strong id="zh-cn_topic_0104704449_b1446918321628"><a name="zh-cn_topic_0104704449_b1446918321628"></a><a name="zh-cn_topic_0104704449_b1446918321628"></a>mdadm -D /dev/</strong><em id="zh-cn_topic_0104704449_i12685835421"><a name="zh-cn_topic_0104704449_i12685835421"></a><a name="zh-cn_topic_0104704449_i12685835421"></a>md0</em>（RAID名称）得出。</p>
 <div class="note" id="note158711059131410"><a name="note158711059131410"></a><a name="note158711059131410"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p88717591141"><a name="p88717591141"></a><a name="p88717591141"></a>这里的10s为RAID插件中配置的采集周期。</p>
 </div></div>
 </td>
@@ -706,8 +705,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p1026318374420"><a name="zh-cn_topic_0104704449_p1026318374420"></a><a name="zh-cn_topic_0104704449_p1026318374420"></a>该指标用于统计测量对象软RAID设备的活跃盘数，RAID异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p16746171311213"><a name="zh-cn_topic_0104704449_p16746171311213"></a><a name="zh-cn_topic_0104704449_p16746171311213"></a>≥0，-1</p>
-<div class="note" id="note14262181732410"><a name="note14262181732410"></a><a name="note14262181732410"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p16265101719247"><a name="p16265101719247"></a><a name="p16265101719247"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
-</div></div>
+<p id="p3469192010407"><a name="p3469192010407"></a><a name="p3469192010407"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p1774612139213"><a name="zh-cn_topic_0104704449_p1774612139213"></a><a name="zh-cn_topic_0104704449_p1774612139213"></a>裸金属服务器</p>
 </td>
@@ -717,8 +715,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p181395565412"><a name="zh-cn_topic_0104704449_p181395565412"></a><a name="zh-cn_topic_0104704449_p181395565412"></a>该指标用于统计测量对象软RAID设备的工作设备数，RAID异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p576220132210"><a name="zh-cn_topic_0104704449_p576220132210"></a><a name="zh-cn_topic_0104704449_p576220132210"></a>≥0，-1</p>
-<div class="note" id="note2429178182519"><a name="note2429178182519"></a><a name="note2429178182519"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p94429842516"><a name="p94429842516"></a><a name="p94429842516"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
-</div></div>
+<p id="p4819142974013"><a name="p4819142974013"></a><a name="p4819142974013"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p127625131328"><a name="zh-cn_topic_0104704449_p127625131328"></a><a name="zh-cn_topic_0104704449_p127625131328"></a>裸金属服务器</p>
 </td>
@@ -728,8 +725,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p79208714518"><a name="zh-cn_topic_0104704449_p79208714518"></a><a name="zh-cn_topic_0104704449_p79208714518"></a>该指标用于统计测量对象软RAID设备的失败设备数，RAID异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p37787131220"><a name="zh-cn_topic_0104704449_p37787131220"></a><a name="zh-cn_topic_0104704449_p37787131220"></a>≥0，-1</p>
-<div class="note" id="note14311131172510"><a name="note14311131172510"></a><a name="note14311131172510"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p1232320111256"><a name="p1232320111256"></a><a name="p1232320111256"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
-</div></div>
+<p id="p1145973584019"><a name="p1145973584019"></a><a name="p1145973584019"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p977820136211"><a name="zh-cn_topic_0104704449_p977820136211"></a><a name="zh-cn_topic_0104704449_p977820136211"></a>裸金属服务器</p>
 </td>
@@ -739,8 +735,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p146215199519"><a name="zh-cn_topic_0104704449_p146215199519"></a><a name="zh-cn_topic_0104704449_p146215199519"></a>该指标用于统计测量对象软RAID设备的备用设备数，RAID异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p1277861311219"><a name="zh-cn_topic_0104704449_p1277861311219"></a><a name="zh-cn_topic_0104704449_p1277861311219"></a>≥0，-1</p>
-<div class="note" id="note103186152252"><a name="note103186152252"></a><a name="note103186152252"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p53281915122516"><a name="p53281915122516"></a><a name="p53281915122516"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
-</div></div>
+<p id="p1343674019409"><a name="p1343674019409"></a><a name="p1343674019409"></a>RAID正常情况下值为0，异常情况下值为-1。</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p5778201316214"><a name="zh-cn_topic_0104704449_p5778201316214"></a><a name="zh-cn_topic_0104704449_p5778201316214"></a>裸金属服务器</p>
 </td>
