--- a/cn.zh-cn/用户指南/配置自定义指标过滤.md
+++ b/cn.zh-cn/用户指南/配置自定义指标过滤.md
@@ -5,7 +5,7 @@
 ## 前提条件<a name="section640315452151"></a>
 
 -   已使用云日志服务，并已在云日志服务中创建筛选器，再查看日志监控数据。
--   已创建日志组与日志主题，创建过程请参考[《云日志服务用户指南》](https://support.huaweicloud.com/usermanual-lts/zh-cn_topic_0067118941.html)。
+-   已创建日志组与日志主题，创建过程请参考[创建日志组](https://support.huaweicloud.com/usermanual-lts/zh-cn_topic_0071259182.html)与[创建日志主题](https://support.huaweicloud.com/usermanual-lts/zh-cn_topic_0076874392.html)。
 
 ## 操作步骤<a name="section1921744417270"></a>
 
