--- a/cn.zh-cn/用户指南/对话机器人服务的监控指标.md
+++ b/cn.zh-cn/用户指南/对话机器人服务的监控指标.md
@@ -20,7 +20,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="18.23%" headers="mcps1.1.6.1.3 "><p id="p178061430151711"><a name="p178061430151711"></a><a name="p178061430151711"></a>0，1</p>
 </td>
-<td class="cellrowborder" valign="top" width="15.160000000000002%" headers="mcps1.1.6.1.4 "><p id="p2632891193"><a name="p2632891193"></a><a name="p2632891193"></a>机器人Id</p>
+<td class="cellrowborder" valign="top" width="15.160000000000002%" headers="mcps1.1.6.1.4 "><p id="p2632891193"><a name="p2632891193"></a><a name="p2632891193"></a>问答机器人</p>
 </td>
 <td class="cellrowborder" valign="top" width="13.38%" headers="mcps1.1.6.1.5 "><p id="p915215955416"><a name="p915215955416"></a><a name="p915215955416"></a>5分钟</p>
 </td>
