--- a/cn.zh-cn/用户指南/管理站点监控.md
+++ b/cn.zh-cn/用户指南/管理站点监控.md
@@ -1,11 +1,29 @@
-# 管理站点监控<a name="ZH-CN_TOPIC_0090332136"></a>
+# 管理站点监控<a name="ZH-CN_TOPIC_0090332137"></a>
 
--   **[修改站点监控](修改站点监控.md)**  
+## 操作场景<a name="section4294748124510"></a>
 
--   **[停用站点监控](停用站点监控.md)**  
+当业务变化或者当之前配置的站点监控规则不符合您的业务需求时，您可参考本章节修改、停用、启用或删除站点监控。
 
--   **[启用站点监控](启用站点监控.md)**  
+## 修改站点监控<a name="section115354303459"></a>
 
--   **[删除站点监控](删除站点监控.md)**  
+1.  登录管理控制台。
+2.  单击“管理与部署 \> 云监控 \> 站点监控”。
+3.  在“站点监控”界面，单击监控站点所在行的“更多”列的“修改站点监控”，进入“修改监控站点”界面。
+4.  在“修改监控站点”界面，根据界面提示配置参数，参数如[表1](创建站点监控.md#table133239595719)所示。
 
+    >![](public_sys-resources/icon-note.gif) **说明：**   
+    >站点类型与站点地址不能修改，因不同站点类型高级配置信息不同，切换后可能会丢失数据。  
+
+
+## 停用站点监控<a name="section373754931019"></a>
+
+在“站点监控”界面，单击站点所在行的“更多”列的“停用站点监控”，在弹出的“停用站点监控”界面，单击“是”，可以停用站点监控。
+
+## 启用站点监控<a name="section11823181117118"></a>
+
+在“站点监控”界面，单击状态为“已停用”的站点所在行的“更多”列的“启用站点监控”，在弹出的“启用站点监控”界面，单击“是”，可以启用站点监控。
+
+## 删除站点监控<a name="section27444549117"></a>
+
+在“站点监控”界面，单击站点所在行的“更多”列的“删除站点监控”，在弹出的“删除站点监控”界面，单击“是”，可以删除站点监控。
 
